# Simulation-Modelling

.github/workflows/: deploy-frontend.yml
.playwright-mcp/: page-2026-04-13T23-15-33-401Z.yml  page-2026-04-13T23-15-53-063Z.yml  page-2026-04-13T23-25-25-564Z.yml
backend/: Procfile  README.md  pyproject.toml
backend/src/newsvendor_api/: __init__.py  main.py  models.py  simulation.py
backend/tests/: test_simulation.py
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: PolicyComparison.svelte  ProfitCurve.svelte  ProfitHistogram.svelte  Tooltip.svelte
frontend/src/routes/: +page.svelte
