[project]
name = "newsvendor-backend"
version = "0.1.0"
description = "Python backend for a SvelteKit newsvendor simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsvendor_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
